# rust_diet_optimizer

./: .clippy.toml  .rustfmt.toml  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md
examples/: demo.sh  request-grams.json  request-percentages.json  request-vegan.json
src/: lib.rs  main.rs
src/application/: diet_service.rs  mod.rs  ports.rs
src/domain/: constraints.rs  cost.rs  error.rs  mod.rs  optimizer.rs  plan.rs  recipe.rs
src/infrastructure/http/: dto.rs  error_response.rs  handlers.rs  mod.rs  router.rs  state.rs
src/infrastructure/repository/: in_memory.rs  mod.rs
src/optimization/: branch_and_bound.rs  mod.rs
tests/: integration_test.rs
