[package]
name = "diet_optimizer"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
description = "High-performance CPU-bound microservice for personalized diet plan optimization"
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json", "macros"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }

[lib]
name = "diet_optimizer"
path = "src/lib.rs"

[[bin]]
name = "diet_optimizer"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
